<resources>
    <string name="app_name">Laundry Pro</string>
    <string name="home">Home</string>
    <string name="employee">Karyawan</string>
    <string name="outlet">Outlet</string>
    <string name="help">Bantuan</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="reg">Registrasi</string>
    <string name="phone">Handphone</string>
    <string name="message_first">Aplikasi yang dikhusukan untuk  karyawan dari laundry yang telah menggunakan sistem Laundry Pro.</string>
    <string name="bypass">Lewati</string>
    <string name="lewati">Lewati</string>
    <string name="next">Lanjut</string>
    <string name="message_second">Kamu dapat mengerjakan tugas kamu sebagai Admin Kasir,  Karyawan Produksi, atau Kurir.</string>
    <string name="register">Daftar</string>
    <string name="name">Nama</string>
    <string name="address">alamat</string>
    <string name="email">email</string>
    <string name="password_confirm">konfirmasi password</string>
    <string name="owner_code">input kode owner tanpa spasi ex: jhon2128</string>
    <string name="outlet_data">Data Outlet</string>
    <string name="outlet_name">Nama outlet</string>
    <string name="outlet_kode">kode outlet tanpa spasi ex: marella001</string>
    <string name="outlet_address">Alamat outlet</string>
    <string name="empty">data kosong!!</string>
    <string name="code">code</string>
    <string name="end_time">Berakhir pada:</string>
    <string name="otp_message">Kode verifikasi telah kami kirimkan melalui SMS, silahkan masukan kode OTP tersebut.</string>
    <string name="end_message">Belum menerima kode?</string>
    <string name="send_again">Kirim ulang</string>
    <string name="logout">Logout</string>
    <string name="customer">Customer</string>
    <string name="status">Status</string>
    <string name="owner">Owner</string>
    <string name="cashier">Kasir</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="develope_process">Masih proses develope</string>
    <string name="outlet_add">Tambah Outlet</string>
    <string name="outlet_code">Kode outlet</string>
    <string name="save">Simpan</string>
    <string name="del">Hapus Outlet</string>
    <string name="go_home">Ke Beranda</string>
    <string name="data_worker">Data Karyawan</string>
    <string name="add_employee">Tambah Karyawan</string>
    <string name="employee_data">Data Karyawan</string>
    <string name="service">Layanan</string>
    <string name="waktu">1 hari</string>
    <string name="no_min_buy">Tidak ada pembelian minimal</string>
    <string name="example_product">1 Set baju seragam</string>
    <string name="tambah_data">Tambah data</string>
    <string name="add_service">Tambah Data Layanan</string>
    <string name="code_product">Code layanan</string>
    <string name="time">Waktu selesai</string>
    <string name="quantity">Jumlah</string>
    <string name="price">Harga</string>
    <string name="delete_product">Hapus product</string>
    <string name="rp_20">Rp20.000</string>
    <string name="perKg">per Kg</string>
    <string name="desc_qty">ex: Kg/Stel/m2/Barang</string>
    <string name="min_order">Minimal pembelian</string>
    <string name="name_service">Nama layanan</string>
    <string name="cash_bank"><![CDATA[Kas laci & Bank]]></string>
    <string name="balance">Saldo</string>
    <string name="title">Title</string>
    <string name="dana"><![CDATA[Dana & Keuangan]]></string>
    <string name="make_trx">Buat transaksi</string>
    <string name="trx_process">Proses Transaksi</string>
    <string name="all">Semua</string>
    <string name="pelunasan">Pelunasan</string>
    <string name="reap_trx">Rekap Transaksi</string>
    <string name="data_sta">Data Statistik</string>
    <string name="paylink"><![CDATA[Paylink & Qris]]></string>
    <string name="outlet_info">Informasi Outlet</string>
    <string name="setoran_outlet">Setoran outlet</string>
    <string name="pembatalan">Permintaan Pembatalan</string>
    <string name="keuangan">Keuangan</string>
    <string name="tot_kas_laci">Total Kas Laci</string>
    <string name="rp_0">Rp 0</string>
    <string name="in_out"><![CDATA[Penerimaan & Pengeluaran]]></string>
    <string name="omset">Omset Perusahaan</string>
    <string name="tot_kas_bank">Total Kas Bank</string>
    <string name="tot_kas_merchant">Total Kas Merchant</string>
    <string name="tot_kas_edc">Total Kas EDC</string>
    <string name="cash_in">Total Penerimaan Cash</string>
    <string name="transfer_in">Total Penerimaan Transfer</string>
    <string name="edc_in">Total Penerimaan EDC</string>
    <string name="out">Total Pengeluaran</string>
    <string name="absen">Absensi</string>
    <string name="hadir">0 Hadir</string>
    <string name="belum_hadir">0 Belum hadir</string>
    <string name="cash_laci">Kas Laci</string>
    <string name="cash_in_bank">Cash Bank</string>
    <string name="bank_name">Nama Bank</string>
    <string name="cash_in_merchant">Cash Merchant</string>
    <string name="cash_in_edc">Cash EDC</string>
    <string name="detail_in">Detail Penerimaan</string>
    <string name="detail_out">Detail Pengeluaran</string>
    <string name="emp_del">Hapus Data Karyawan</string>
    <string name="time_ex">00:00:00</string>
    <string name="belum_terima_kode">Belum menerima kode?</string>
    <string name="code_ri">+62</string>
    <string name="phone_62">8536600000</string>
    <string name="phone_message">Masukan no Handphone anda,kami akan mengirimkan kode OTP</string>
    <string name="fill_outlet">Pilih Outlet</string>
    <string name="job">Jabatan</string>
    <string name="setting">Pengaturan</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="edit_employee">Merubah profil</string>
    <string name="keluar">Keluar dari akun</string>
    <string name="input_banner">Input Banner</string>
    <string name="input_banner_decs">Merubah banner di beranda</string>
    <string name="choose_image">Pilih Gambar</string>
    <string name="owner_data">Data Owner</string>
    <string name="camera_button">Tombol Camera</string>
    <string name="take">Ambil Foto</string>
    <string name="code_owner">Kode Owner</string>
    <string name="back">Back</string>
    <string name="date_ex">2 Jun 2023 02:21:15</string>
    <string name="date_qty">21 hari</string>
    <string name="qty_come">Kehadiran</string>
    <string name="dot_two">:</string>
    <string name="time_date">Waktu hadir</string>
    <string name="to_home">Keberanda</string>
    <string name="phone_ex">ex:85680809090</string>
    <string name="outlet_detail">Detail Outlet</string>
    <string name="outlet_name_ex">Marella Laundry</string>
    <string name="outlet_phne">Telephone</string>
    <string name="outlet_phone">No.Telephone</string>
    <string name="outlet_phone_ex">6285326699066</string>
    <string name="address_ex">Jl.Sarbini 99 Kebumen</string>
    <string name="data_service">Daftar Layanan</string>
    <string name="outlet_code_ex">mr001</string>
    <string name="satuan">Satuan</string>
    <string name="code_ex">k001</string>
    <string name="day">hari</string>
    <string name="qty_service">Quantity Service</string>
    <string name="copy_service">Copy layanan</string>
    <string name="message_copy">Masukan Kode Outlet yang akan di copy</string>
    <string name="edit_phone">Edit Phone</string>
    <string name="phone_no">Telephone</string>
    <string name="image_outlet">Image Outlet</string>
    <string-array name="listSatuan">
        <item>Kg</item>
        <item>Stel</item>
        <item>m2</item>
        <item>Pcs</item>
    </string-array>
</resources>
