<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.splash.FirstActivity">
    <ImageView
        android:id="@+id/img_store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:src="@drawable/banner_first"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"/>
    <TextView
        android:id="@+id/tv_message"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/message_first"
        android:layout_centerHorizontal="true"
        android:textAlignment="inherit"
        android:layout_marginTop="@dimen/v_margin"
        android:layout_below="@+id/img_store"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/twenty"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="150dp"
            android:text="@string/lewati"
            android:background="@drawable/btnwhite"
            android:layout_marginBottom="@dimen/m_six"
            android:layout_marginTop="@dimen/m_six"
            android:layout_height="50dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            android:layout_width="150dp"
            android:text="@string/next"
            android:layout_marginStart="@dimen/twenty"
            android:background="@drawable/btn_blue"
            android:backgroundTint="@color/blue_soft"
            android:layout_marginBottom="@dimen/m_six"
            android:layout_marginTop="@dimen/m_six"
            android:layout_height="50dp"/>

    </LinearLayout>


</RelativeLayout>