<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.reg.UpdateOwnActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="@string/owner_data"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/img_profile"
                android:layout_width="@dimen/m_80"
                android:layout_height="120dp"
                android:contentDescription="@string/profile"
                android:background="@drawable/line_grey"
                android:layout_marginStart="@dimen/twenty"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_photo"
                style="@android:style/ButtonBar"
                android:layout_width="150dp"
                android:layout_marginStart="@dimen/fifty"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:backgroundTint="@color/grey"
                android:background="@drawable/btn_blue"
                android:text="@string/take"
                android:textSize="18sp"/>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/name"
            app:boxCornerRadiusBottomEnd="@dimen/v_margin"
            app:boxCornerRadiusBottomStart="@dimen/v_margin"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:endIconMode="clear_text"
            app:startIconTint="@color/teal_200">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/twenty"
                android:layout_marginStart="@dimen/twenty"
                android:singleLine="true"
                android:inputType="text"
                android:imeOptions="actionNext"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/address"
            app:boxCornerRadiusBottomEnd="@dimen/v_margin"
            app:boxCornerRadiusBottomStart="@dimen/v_margin"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:endIconMode="clear_text"
            app:startIconTint="@color/teal_200">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/twenty"
                android:layout_marginEnd="@dimen/twenty"
                android:singleLine="true"
                android:inputType="text"
                android:imeOptions="actionNext"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/tv_code_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/v_margin"
            android:layout_marginStart="@dimen/thirty"
            android:layout_marginEnd="@dimen/twenty"
            android:text="@string/code_owner"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/v_margin"
            android:layout_marginStart="@dimen/thirty"
            android:layout_marginEnd="@dimen/twenty"
            android:text="@string/phone"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/v_margin"
            android:layout_marginStart="@dimen/thirty"
            android:layout_marginEnd="@dimen/twenty"
            android:text="@string/email"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save"
            style="@android:style/ButtonBar"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fifty"
            android:layout_marginTop="@dimen/fifty"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/blue_soft"
            android:background="@drawable/btn_blue"
            android:text="@string/save"
            android:textSize="18sp"/>

    </LinearLayout>


</androidx.core.widget.NestedScrollView>
