<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.outlet.DetailOutletActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="@dimen/fifty"
                android:layout_height="@dimen/fifty"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/back"
                android:src="@drawable/baseline_arrow_back_ios_24"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/m_100"
                android:layout_gravity="center_vertical"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/outlet_detail"/>

        </LinearLayout>
        <ImageView
            android:id="@+id/img_outlet"
            android:layout_width="@dimen/m_100"
            android:layout_height="@dimen/m_100"
            android:layout_marginTop="@dimen/fifty"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/outlet_info"
            android:src="@drawable/ic_laundry"
            android:background="@drawable/line_grey"/>
        <ImageButton
            android:id="@+id/btn_edit"
            android:layout_width="@dimen/fifty"
            android:layout_height="@dimen/fifty"
            android:layout_marginTop="@dimen/v_margin"
            android:src="@drawable/baseline_edit_note_24"
            android:background="@drawable/line_trans"
            android:contentDescription="@string/edit_profile"
            android:layout_gravity="center_horizontal"/>
       <androidx.cardview.widget.CardView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="@dimen/twenty"
           app:cardCornerRadius="1dp"
           app:cardElevation="1dp"
           app:cardMaxElevation="1dp"
           app:cardUseCompatPadding="true">
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical">
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="@dimen/m_six"
                   android:text="@string/outlet_name"
                   android:layout_marginStart="@dimen/twenty"
                   android:layout_marginEnd="@dimen/twenty"/>

               <TextView
                   android:id="@+id/tv_outlet_name"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginBottom="@dimen/m_six"
                   android:text="@string/outlet_name_ex"
                   android:textColor="@color/black"
                   android:layout_marginStart="@dimen/twenty"
                   android:layout_marginEnd="@dimen/twenty"/>
           </LinearLayout>
       </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="1dp"
            app:cardElevation="1dp"
            app:cardMaxElevation="1dp"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/m_six"
                    android:text="@string/outlet_code"
                    android:layout_marginStart="@dimen/twenty"
                    android:layout_marginEnd="@dimen/twenty"/>

                <TextView
                    android:id="@+id/tv_outlet_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/m_six"
                    android:text="@string/outlet_code_ex"
                    android:textColor="@color/black"
                    android:layout_marginStart="@dimen/twenty"
                    android:layout_marginEnd="@dimen/twenty"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="1dp"
            app:cardElevation="1dp"
            app:cardMaxElevation="1dp"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:id="@+id/lay_phone"
                android:layout_width="@dimen/m_250"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/m_six"
                    android:text="@string/outlet_phone"
                    android:layout_marginStart="@dimen/twenty"
                    android:layout_marginEnd="@dimen/twenty"/>
                <TextView
                    android:id="@+id/tv_outlet_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/outlet_phone_ex"
                    android:layout_marginBottom="@dimen/m_six"
                    android:textColor="@color/black"
                    android:layout_marginStart="@dimen/twenty"
                    android:layout_marginEnd="@dimen/twenty"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="1dp"
            app:cardElevation="1dp"
            app:cardMaxElevation="1dp"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/m_six"
                    android:text="@string/outlet_address"
                    android:layout_marginStart="@dimen/twenty"
                    android:layout_marginEnd="@dimen/twenty"/>
                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address_ex"
                    android:layout_marginBottom="@dimen/m_six"
                    android:textColor="@color/black"
                    android:layout_marginStart="@dimen/twenty"
                    android:layout_marginEnd="@dimen/twenty"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/card_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="1dp"
            app:cardElevation="1dp"
            app:cardMaxElevation="1dp"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/v_margin"
                    android:layout_marginBottom="@dimen/v_margin"
                    android:text="@string/data_service"
                    android:textColor="@color/black"
                    android:layout_marginStart="@dimen/twenty"/>
                <ImageView
                    android:layout_width="@dimen/thirty"
                    android:layout_height="@dimen/thirty"
                    android:layout_marginStart="@dimen/m_200"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/baseline_keyboard_arrow_right_24"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>


</androidx.core.widget.NestedScrollView>